# okxTerm

./: .gitignore  Cargo.toml  README.md  config.toml.sample
locales/en/: ui.toml
locales/fake/: ui.toml
locales/zh/: ui.toml
src/: main.rs
src/config/: mod.rs
src/http/: mod.rs
src/locales/: mod.rs  ui.rs
src/ok/: mod.rs  request.rs  response.rs
src/ui/: mod.rs
src/utils/: secret.rs
