[package]
name = "okxTerm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.22"
clap = { version = "4.5.9", features = ["derive"] }

# http client
reqwest = { version = "0.12", features = ["json"] }

# datetime
chrono = "0.4.41"

# encrypt
hmac = "0.12.1"
sha2 = "0.10.9"
anyhow = "1.0.98"
base64 = "0.22.1"

# global veriable
once_cell = "1.21.3"

# tui
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"
log = "0.4.27"
env_logger = "0.11.8"
